# openCL_stereo_disparity

./: README.md
C_C++/: view1.pgm  view5.pgm
C_C++/src/: StereoDisparity.cpp  StereoDisparityV2.cpp  cmake-file.txt  ex3.cpp
DeviceInfo/: DeviceInfo  DeviceInfo.c
OpenCL/src/: CMakeLists.txt  helloOpenCL.c
Phase 2/Examples/: generate_test_image.c  generate_test_image.cpp  hello_world_open_cl.c
Phase 2/Exercise1/: Makefile  README.md  exercise1_matrix_addition.c
Phase 2/Exercise2/: Makefile  README.md  exercise2_image_processing.c  exercise2_image_processing.cpp
Phase 2/Exercise3/: Makefile  README.md  exercise3  exercise3_image_processing.c
Phase 3/: Multiprocesseur programming.code-workspace  StereoDisparity  StereoDisparity copy.cpp  StereoDisparity.cpp  StereoDisparity_enhanced  StereoDisparity_enhanced.cpp  StereoDisparity_optimized  StereoDisparity_optimized.cpp
Phase_2/src/: Makefile  StereoDisparity  StereoDisparity.cpp  ex2  ex2.cpp  ex3  ex3.c  exercise3  exercise3_kernels.cl
Phase_3/src/: Makefile  StereoDisparityV2.cpp  dispV2
Phase_4/output/: log.txt
Phase_4/src/: Makefile  StereoDisparityParallel  StereoDisparityParallel.cpp  dispV2  stb_image_write.h
Phase_5/: DeviceInfo.c  Makefile
Phase_5/src/: StereoDisparity  StereoDisparity.cpp  StereoDisparity.h  StereoDisparityOpenCL  StereoDisparityOpenCL.cpp  image_loader  image_loader.cpp  image_processing.cpp  image_processing.h  kernels.cl
Phase_6/src/: Makefile  StereoDisparityOpenCL  StereoDisparityOpenCL.cpp  apply_optimizations.sh  kernels.cl
(+6 files in other folders)
